--- a/app/src/main/res/layout/login_activity_2.xml
+++ b/app/src/main/res/layout/login_activity_2.xml
@@ -1,36 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    android:background="@color/dim_gray"
+    android:orientation="vertical"
+    android:id="@+id/layout_login_2_root"
+    tools:context=".ui.LoginActivity2">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:orientation="vertical"
         android:gravity="top|center">
 
         <TextView
+            android:id="@+id/txt_login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="Login"
+            android:fontFamily="@font/kanit_thin"
+            android:text="@string/login"
             android:textColor="@color/white"
-            android:textSize="40dp"/>
+            android:textSize="40dp" />
 
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="200dp"
-        android:layout_marginBottom="200dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="180dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        app:cardBackgroundColor="@color/midnight_green">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -39,26 +46,61 @@
             android:gravity="center">
 
             <EditText
+                android:id="@+id/txt_username"
+                style="@style/editText"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/btn_height_normal"
+                android:fontFamily="@font/baloo_bhai"
+                android:drawableLeft="@drawable/baseline_account_circle_24"
+                android:drawableTint="@color/blue"
+                android:drawablePadding="@dimen/drw_padding_ediText"
+                android:hint="@string/username"
+                android:maxLines="1"
+                android:inputType="textEmailAddress"
+                android:imeOptions="actionNext"/>
+
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="20dp"
-                android:text="Usename"
-                android:textSize="20dp"/>
+                app:hintTextColor="@color/red">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    style="@style/editText"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/btn_height_normal"
+                    android:layout_margin="15dp"
+                    android:hint="@string/username"
+                    android:inputType="text"
+                    android:drawableLeft="@drawable/baseline_account_circle_24"
+                    android:drawableTint="@color/red"
+                    android:drawablePadding="@dimen/drw_padding_ediText"
+                    android:maxLines="1"
+                    android:imeOptions="actionDone"/>
+
+            </com.google.android.material.textfield.TextInputLayout>
 
             <EditText
+                style="@style/editText"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="20dp"
-                android:text="Password"
-                android:textSize="20dp"/>
+                android:layout_height="@dimen/btn_height_normal"
+                android:fontFamily="@font/baloo_bhai"
+                android:drawableLeft="@drawable/baseline_password_24"
+                android:drawableTint="@color/blue"
+                android:drawablePadding="@dimen/drw_padding_ediText"
+                android:text="@string/password"
+                android:imeOptions="actionGo"/>
 
             <Button
+                android:id="@+id/btn_login"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/simonetta"
+                android:drawableLeft="@drawable/baseline_arrow_forward_24"
+                android:drawableTint="@color/white"
                 android:layout_marginStart="60dp"
                 android:layout_marginEnd="60dp"
                 android:layout_marginTop="40dp"
-                android:text="Login"
+                android:text="@string/txt_btn_login"
                 android:textSize="24dp"/>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -66,8 +108,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="500dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginBottom="540dp"
         android:layout_marginStart="60dp"
         android:layout_marginEnd="60dp"
         android:backgroundTint="@color/cardview_shadow_start_color"
@@ -84,25 +126,25 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="540dp"
+        android:layout_marginTop="560dp"
         android:gravity="bottom"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp"
+            android:layout_marginBottom="60dp"
             android:layout_marginStart="30dp"
             android:layout_marginEnd="20dp"
             android:textColor="@color/white"
-            android:text="Don't have an Account?"
+            android:text="@string/don_t_have_an_account"
             android:textSize="18dp"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="70dp"
-            android:text="SignUp"/>
+            android:layout_marginBottom="60dp"
+            android:text="@string/txt_btn_sign_up"/>
 
     </LinearLayout>
 </RelativeLayout>
