--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -6,4 +6,21 @@
     </style>
 
     <style name="Theme.Test" parent="Base.Theme.Test" />
+
+    <style name="buttonThemeFacebook">
+        <item name="backgroundTint">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:text">@string/txt_btn_facebook</item>
+    </style>
+
+    <style name="editText">
+        <item name="android:background">@drawable/et_shape_background</item>
+        <item name="android:layout_margin">15dp</item>
+        <item name="android:layout_marginBottom">15dp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:textSize">@dimen/text_normal_size</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/red</item>
+    </style>
 </resources>
